--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-/.gradle
+.gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-/.DS_Store
+.idea/workspace.xml
+.idea/libraries
+.DS_Store
 /build
 /captures
-/.idea/*
+.idea/*
 *.iml
 
 #comment
